# Rag_learn

./: .gitignore  pyproject.toml  requirements.txt
0-dataparsing/: Ingestion.ipynb
0-dataparsing/data/text_files/: eassy_writing.txt
1-embedding_and_database/: 1-embedding.ipynb  openAiEmbedding.ipynb
